WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159525
Define DYLD_MACOSX_VERSION_10_12
https://bugs.webkit.org/show_bug.cgi?id=159525
Summary
Define DYLD_MACOSX_VERSION_10_12
Jiewen Tan
Reported
2016-07-07 15:03:19 PDT
Define DYLD_MACOSX_VERSION_10_12
Attachments
Patch
(2.78 KB, patch)
2016-07-07 15:08 PDT
,
Jiewen Tan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jiewen Tan
Comment 1
2016-07-07 15:03:55 PDT
<
rdar://problem/26250296
>
Jiewen Tan
Comment 2
2016-07-07 15:08:26 PDT
Created
attachment 283060
[details]
Patch
Brent Fulgham
Comment 3
2016-07-07 16:08:23 PDT
Comment on
attachment 283060
[details]
Patch r=me
Jiewen Tan
Comment 4
2016-07-07 18:35:50 PDT
(In reply to
comment #3
)
> Comment on
attachment 283060
[details]
> Patch > > r=me
Thanks, Brent.
WebKit Commit Bot
Comment 5
2016-07-07 18:57:46 PDT
Comment on
attachment 283060
[details]
Patch Rejecting
attachment 283060
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 283060, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: eckout/scm/scm.py", line 77, in run decode_output=decode_output) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/common/system/executive.py", line 443, in run_command output = output.decode(self._child_process_encoding()) File "/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/encodings/utf_8.py", line 16, in decode return codecs.utf_8_decode(input, errors, True) UnicodeDecodeError: 'utf8' codec can't decode byte 0xb6 in position 24: invalid start byte Full output:
http://webkit-queues.webkit.org/results/1644115
WebKit Commit Bot
Comment 6
2016-07-08 00:17:55 PDT
Comment on
attachment 283060
[details]
Patch Clearing flags on attachment: 283060 Committed
r202971
: <
http://trac.webkit.org/changeset/202971
>
WebKit Commit Bot
Comment 7
2016-07-08 00:18:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug