Define DYLD_MACOSX_VERSION_10_12 https://bugs.webkit.org/show_bug.cgi?id=159525 <rdar://problem/26250296>

Reviewed by Brent Fulgham.

Source/WebKit/mac:

* WebView/WebView.mm:
(shouldConvertInvalidURLsToBlank):
Replace 0x000A0C00 with DYLD_MACOSX_VERSION_10_12.

Source/WTF:

* wtf/spi/darwin/dyldSPI.h:


Canonical link: https://commits.webkit.org/177692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202971 268f45cc-cd09-0410-ab3c-d52691b4dbfc